test-helm/templates/network-policies/apps-network-policy.yaml

apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: webmvc-ingress-policy
  namespace: projet-apps
spec:
  podSelector:
    matchLabels:
      app: webmvc

  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx

      ports:
        - protocol: TCP
          port: 80
