test-helm/templates/network-policies/data-network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: data-ingress-policy
  namespace: ns-data
spec:
  podSelector: {}
  policyTypes:
    - Ingress

  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: projet-apps

      ports:
        - protocol: TCP
          port: 1433
        - protocol: TCP
          port: 6379
        - protocol: TCP
          port: 5672
